# Tasks

HW13Backend/: pyproject.toml
HW13Backend/myproject/: settings.py  urls.py
HW13Backend/nfactorial/: urls.py  views.py
HW14Backend/: db.sqlite3  pyproject.toml
HW14Backend/myproject/: settings.py  urls.py
HW14Backend/news/: admin.py  models.py  urls.py  views.py
HW16Backend/: db.sqlite3
HW16Backend/myproject/: settings.py  urls.py
HW16Backend/news/: forms.py  models.py  tests.py  urls.py  views.py
HW3Backend/: main.py  pyproject.toml
HW3Backend/api/: cars.py
HW3Backend/model/: cars.py
HW3Backend/repository/: CarsRepository.py
HW3Backend/repository/database/: data.csv
HW3Backend/templates/: cars.html  new.html  search.html
HW4Backend/: main.py  pyproject.toml
HW4Backend/app/: repository.py
HW4Backend/templates/: index.html
HW5Backend/: main.py
HW5Backend/app/: repository.py
HW5Backend/tests/: test_task1.py
HW6Backend/: main.py  pyproject.toml
HW6Backend/api/: main.py
HW7Backend/: main.py  pyproject.toml
HW7Backend/api/: main.py
HW7Backend/models/: cart.py  users.py
HW7Backend/repository/: FlowerRepository.py  PurchasesRepository.py  purchased.csv
HW7Backend/repository/models/: main.py
HW8Backend/: alembic.ini  crud.py  database.py  flowers.db  main.py  pyproject.toml  schemas.py
HW8Backend/api/: main.py
HWBackend15/: db.sqlite3  pyproject.toml
RatingShanyrak/: db.sqlite3  manage.py  pyproject.toml
Shanyrak/: .env  alembic.ini  pyproject.toml  shanyraq.db
Shanyrak/alembic/: env.py
Shanyrak/alembic/versions/: 2eb19dd348ed_add_comments_table.py  ad7dabc5db60_add_favorites_table.py  ee7b52947fba_add_favorites_table.py  f0212de09e01_init.py
Shanyrak/app/: config.py  db.py  main.py
Shanyrak/app/core/: dependencies.py  security.py
Shanyrak/app/models/: comment.py  shanyrak.py  user.py
Shanyrak/app/repositories/: comment.py  shanyrak.py  user.py
Shanyrak/app/routes/: auth.py  comments.py  shanyrak.py
Shanyrak/app/schemas/: comment.py  shanyrak.py  user.py
Vox/: data.csv  main.py  pyproject.toml
Vox/templates/: index.html
ascii_art/: main.py
assigment12/: hw.py
assigment14/: README.md
assigment14/first/: pyproject.toml
assigment14/first/tests/: standard.txt  test_ascii_art.py  test_main.py
exercise10-11/: hw.py
exercise15/: hw.py  hw_bonus.py  test_hw.py
exercise16/: hw.py
exercise6/: main.py
exercise7/: hw.py
exercise8/: hw.py  hw_bonus.py
exercise9/: hw.py  hw_bonus.py  prim.py
(+61 files in other folders)
