[project]
name = "vox"
version = "0.1.0"
description = ""
authors = [
    {name = "Nurlibaj",email = "nurlibaj@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2 (>=3.1.5,<4.0.0)",
    "attrs (>=24.3.0,<25.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
