[tool.poetry]
name = "first"
version = "0.1.0"
description = ""
authors = ["Nurlibaj <nurlibaj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
numpy = "^2.1.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
